<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Puzzle_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cosmic_latte"
    tools:context=".PuzzleProblemActivity">

    <TextView
        android:id="@+id/PuzzleMoveCountHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/moves"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzlesolve_message" />

    <TextView
        android:id="@+id/PuzzleCurrentStateHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/fwgc_currentstate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PuzzleCurrentState"
        style="@style/MediumMono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/eight_initial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleCurrentStateHeader" />

    <TextView
        android:id="@+id/PuzzleFinalStateHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/fwgc_finalstate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleCurrentState" />

    <TextView
        android:id="@+id/PuzzleFinalState"
        style="@style/MediumMono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/eight_final"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleFinalStateHeader" />

    <LinearLayout
        android:id="@+id/PuzzleMoveButtons"
        android:layout_width="208dp"
        android:layout_height="456dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puzzlespinner"></LinearLayout>

    <Button
        android:id="@+id/PuzzleResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleMoveButtons" />

    <Button
        android:id="@+id/PuzzleSolveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:onClick="solve"
        android:text="@string/solve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleResetButton" />

    <Button
        android:id="@+id/PuzzleNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:onClick="nextAction"
        android:text="@string/next_move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleSolveButton" />

    <TextView
        android:id="@+id/PuzzleMoveCount"
        style="@style/MediumMono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleMoveCountHeader" />

    <TextView
        android:id="@+id/PuzzleStatisticsHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/statistics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleMoveCount" />

    <TextView
        android:id="@+id/PuzzleBenchmarkHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="72dp"
        android:text="@string/benchmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PuzzleStatistics"
        style="@style/MediumMono"
        android:layout_width="208dp"
        android:layout_height="148dp"
        android:layout_marginStart="30dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleStatisticsHeader" />

    <Spinner
        android:id="@+id/puzzlespinner"
        android:layout_width="217dp"
        android:layout_height="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleBenchmarkHeader" />

    <TextView
        android:id="@+id/puzzlesolve_message"
        style="@style/MessageStyle"
        android:layout_width="201dp"
        android:layout_height="90dp"
        android:layout_marginTop="24dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PuzzleFinalState" />
</androidx.constraintlayout.widget.ConstraintLayout>