<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FWGC_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cosmic_latte"
    tools:context=".FWGCProblemActivity">

    <TextView
        android:id="@+id/FWGCMoveCountHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/moves"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fwgcsolve_message" />

    <TextView
        android:id="@+id/FWGCCurrentStateHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/fwgc_currentstate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FWGCCurrentState"
        style="@style/MediumMono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/fwgc_initial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCCurrentStateHeader" />

    <TextView
        android:id="@+id/FWGCFinalStateHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/fwgc_finalstate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCCurrentState" />

    <TextView
        android:id="@+id/FWGCFinalState"
        style="@style/MediumMono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/fwgc_final"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCFinalStateHeader" />

    <LinearLayout
        android:id="@+id/FWGCMoveButtons"
        android:layout_width="208dp"
        android:layout_height="456dp"
        android:layout_marginTop="104dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

    <Button
        android:id="@+id/FWGCResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCMoveButtons" />

    <Button
        android:id="@+id/FWGCSolveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:onClick="solve"
        android:text="@string/solve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCResetButton" />

    <Button
        android:id="@+id/FWGCNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:onClick="nextAction"
        android:text="@string/next_move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCSolveButton" />

    <TextView
        android:id="@+id/FWGCMoveCount"
        style="@style/MediumMono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCMoveCountHeader" />

    <TextView
        android:id="@+id/FWGCStatisticsHeader"
        style="@style/InstructionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/statistics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCMoveCount" />

    <TextView
        android:id="@+id/FWGCStatistics"
        style="@style/MediumMono"
        android:layout_width="173dp"
        android:layout_height="174dp"
        android:layout_marginStart="30dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCStatisticsHeader" />

    <TextView
        android:id="@+id/fwgcsolve_message"
        style="@style/MessageStyle"
        android:layout_width="187dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FWGCFinalState"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>